// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Projects Projects Menu 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c9 svg + span {
  margin-left: 4px;
}

.c10 {
  border: none;
  color: #353535;
  padding: 0;
}

.c10 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c11 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c11 svg {
  max-height: 28px;
  max-width: 28px;
}

.c11 svg {
  margin: 0;
}

.c11 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c11:focus svg path:first-of-type,
.c11:hover svg path:first-of-type {
  fill: #f7b314;
}

.c12 {
  padding-left: 12px;
}

.c7 {
  color: #6e6e6e;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .c6 {
  background: #f2fbfc;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c8 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="c6 c7"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="c4"
    />
    <div
      className="c8"
    >
      <button
        className="c9 c10 c11"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-x7a50a-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c12"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Projects Projects Page - Empty 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c4 {
  border: none;
  color: #353535;
  padding: 0;
}

.c4 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  font-size: 14px;
  text-overflow: ellipsis;
  font-size: 20px;
}

.c5 svg {
  max-height: 40px;
  max-width: 40px;
}

.c5 svg {
  margin: 0;
}

.c5 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c5:focus svg path:first-of-type,
.c5:hover svg path:first-of-type {
  fill: #f7b314;
}

.c6 {
  padding-left: 12px;
}

.c2 {
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  text-align: center;
}

.c7 {
  font-weight: 300;
  padding-top: 20px;
  color: #6e6e6e;
}

.c8 {
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  padding-top: 6px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="EmptyProjectPage__Placeholder-sc-148twx6-1"
      >
        <div
          className="c2"
        >
          <canvas
            height={375}
            width={375}
          />
        </div>
      </div>
      <div
        className="EmptyProjectPage__ActionContainer-sc-148twx6-2"
      >
        <button
          className="c3 c4 c5"
          onClick={[Function]}
          size="large"
          type="button"
        >
          <svg
            className="AddButton__RegularAddIcon-x7a50a-0"
            height={40}
            viewBox="0 0 32 34"
            width={40}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                fill="#FFBD26"
              />
              <path
                d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
                fill="#FFF"
                stroke="#FFF"
              />
            </g>
          </svg>
          <div
            className="c6"
          >
            New Manuscript
          </div>
        </button>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          This project is empty.
        </div>
        <div
          className="c8"
        >
          Create a manuscript to get started.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Projects Projects Page - Empty due to pull error 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c9 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c9:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  border: none;
  color: #353535;
  padding: 0;
}

.c4 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  font-size: 14px;
  text-overflow: ellipsis;
  font-size: 20px;
}

.c5 svg {
  max-height: 40px;
  max-width: 40px;
}

.c5 svg {
  margin: 0;
}

.c5 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c5:focus svg path:first-of-type,
.c5:hover svg path:first-of-type {
  fill: #f7b314;
}

.c6 {
  padding-left: 12px;
}

.c2 {
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  text-align: center;
}

.c7 {
  font-weight: 300;
  padding-top: 20px;
  color: #6e6e6e;
}

.c8 {
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  padding-top: 6px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="EmptyProjectPage__Placeholder-sc-148twx6-1"
      >
        <div
          className="c2"
        >
          <canvas
            height={375}
            width={375}
          />
        </div>
      </div>
      <div
        className="EmptyProjectPage__ActionContainer-sc-148twx6-2"
      >
        <button
          className="c3 c4 c5"
          onClick={[Function]}
          size="large"
          type="button"
        >
          <svg
            className="AddButton__RegularAddIcon-x7a50a-0"
            height={40}
            viewBox="0 0 32 34"
            width={40}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                fill="#FFBD26"
              />
              <path
                d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
                fill="#FFF"
                stroke="#FFF"
              />
            </g>
          </svg>
          <div
            className="c6"
          >
            New Manuscript
          </div>
        </button>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          Error while pulling data: there may be manuscripts which are missing locally
        </div>
        <div
          className="c8"
        >
          <button
            className="c3 c9"
            onClick={[Function]}
            type="button"
          >
            Restart sync
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
